Fix #21 : Support whitespaces inside :not()
Closes #21

--- a/tests/outputs/scss_css.css
+++ b/tests/outputs/scss_css.css
@@ -449,6 +449,9 @@ foo|* {
 :not(.blah) {
   a: b; }
 
+:not(.blah) {
+  a: b; }
+
 :not([foo]) {
   a: b; }
 
@@ -468,6 +471,9 @@ foo|* {
   a: b; }
 
 :not(a#foo.bar) {
+  a: b; }
+
+:not(#foo .bar > baz) {
   a: b; }
 
 :not(#foo .bar > baz) {
